Bug 217972 : nsRDFDOMNodeList cleanup r=caillon sr=jst