content/xul/content/src/nsRDFDOMNodeList.h
@@ -41,23 +41,18 @@
 
 #include "nsIDOMNodeList.h"
 #include "nsIRDFNodeList.h"
+#include "nsCOMArray.h"
 class nsIDOMNode;
-class nsISupportsArray;
 
 class nsRDFDOMNodeList : public nsIDOMNodeList,
                          public nsIRDFNodeList
 {
 private:
-    //nsISupports* mInner; Not being used?
-    nsISupportsArray* mElements;
+    nsCOMArray<nsIDOMNode> mElements;
 
-    nsRDFDOMNodeList(void);
-    nsresult Init(void);
 
 public:
-    static nsresult Create(nsRDFDOMNodeList** aResult);
-    static nsresult CreateWithArray(nsISupportsArray* aArray, nsRDFDOMNodeList** aResult);
-
+    nsRDFDOMNodeList(void);
     virtual ~nsRDFDOMNodeList(void);
 
     // nsISupports interface
